--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                             </div>
                         </div>
                         <div class="col-12 mt-3">
-                            <textarea cols="30" rows="6" class="p-1 w_100 fw_400 Poppins fs_sm border"
+                            <textarea cols="30" rows="6" class="p-1 w_100 fw_400 textarea Poppins fs_sm border"
                                 placeholder="About Me"></textarea>
                         </div>
                         <div class="col-12 mt-4 text-center">
