--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <a class="clr_white fw_400 fs_md ms-lg-4 ms-sm-4 Poppins" href="">Learn more</a>
             </div>
             <!--  -->
-            <div class=" mt_50_lg d-flex justify-content-center">
+            <div class=" mt_50_lg d-flex justify-content-center justify-content-lg-start">
                 <div class="background  d-flex p-4 flex-column flex-lg-row box_blue_sm align-items-lg-center ">
-                    <div class="d-flex align-items-center ms-lg-3  ms-4 ps-lg-3 pt">
+                    <div class="d-flex align-items-center  ms-lg-2 ms-4 ps-lg-3 pt">
                         <div class="">
                             <img src="/assets/img/png/Group.png" alt="">
                         </div>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <hr class=" line  ms-4 dis_xsm_none">
-                    <div class=" align-items-center ms-lg-4 ms-3 mt-lg-2 mt-5">
+                    <div class=" align-items-center ms-lg-5 ms-3  mt-lg-0  mt-5">
                         <a class="clr_blue fw_700 fs_md GO Poppins " href="">GO CHECK</a>
                     </div>
                 </div>
@@ -184,35 +184,35 @@
                     Suspendisse maximus ipsum sem. Donec ut justo et leo congue lacinia vitae nec </p>
             </div>
             <div class="row mt-5 ">
-                <div class="col-lg-3 col-sm-6 col-12-xsm mt-10-xsm ">
+                <div class="col-lg-3 col-6 mt-10-xsm ">
                     <div class="text-center">
                         <img src="/assets/img/png/Vector.png" alt="">
                         <p class="fw_700 Poppins fs_xl clr_white mt-2">8800</p>
-                        <p class="fw_400 Poppins fs_md clr_white ">PARTICIPANTS</p>
+                        <p class="fw_400 Poppins fs_md clr_white font_size_xsm ">PARTICIPANTS</p>
                     </div>
 
                 </div>
-                <div class="col-lg-3 col-sm-6 col-12-xsm mt-10-xsm">
+                <div class="col-lg-3 col-6  mt-10-xsm">
                     <div class="text-center ">
                         <img src="/assets/img/png/Vector(1).png" alt="">
                         <p class="fw_700 Poppins fs_xl clr_white mt-2">300</p>
-                        <p class="fw_400 Poppins fs_md clr_white ">TOPICS</p>
+                        <p class="fw_400 Poppins fs_md clr_white font_size_xsm ">TOPICS</p>
                     </div>
 
                 </div>
-                <div class="col-lg-3 col-sm-6 col-12-xsm mt-10-xsm">
+                <div class="col-lg-3 col-6  mt-10-xsm">
                     <div class="text-center mt-sm-5 mt-lg-0">
                         <img src="/assets/img/png/Vector(2).png" alt="">
                         <p class="fw_700 Poppins fs_xl clr_white mt-2">50</p>
-                        <p class="fw_400 Poppins fs_md clr_white ">SPEAKERS</p>
+                        <p class="fw_400 Poppins fs_md clr_white font_size_xsm">SPEAKERS</p>
                     </div>
 
                 </div>
-                <div class="col-lg-3 col-sm-6 col-12-xsm mt-10-xsm">
+                <div class="col-lg-3 col-6  mt-10-xsm">
                     <div class="text-center mt-sm-5 mt-lg-0 ">
                         <img src="/assets/img/png/Vector(3).png" alt="">
-                        <p class="fw_700 Poppins fs_xl clr_white mt-2">30</p>
-                        <p class="fw_400 Poppins fs_md clr_white ">AWARDS</p>
+                        <p class="fw_700 Poppins fs_xl clr_white mt -2">30</p>
+                        <p class="fw_400 Poppins fs_md clr_white font_size_xsm">AWARDS</p>
                     </div>
 
                 </div>
@@ -300,37 +300,37 @@
                     <div class="row mt-4">
                         <div class="col-6">
                             <div class="">
-                                <input class="p-1 w_100 fw_400 Poppins fs_sm border" type="text"
+                                <input class="p-1 ps-2 w_100 fw_400 Poppins fs_sm border" type="text"
                                     placeholder="First Name">
                             </div>
                         </div>
                         <div class="col-6">
                             <div class=" ml_20 ">
 
-                                <input class="p-1 w_100 fw_400 Poppins fs_sm border" type="text"
+                                <input class="p-1 ps-2 w_100 fw_400 Poppins fs_sm border" type="text"
                                     placeholder="Last Name">
                             </div>
                         </div>
                         <div class=" col-12 mt-3">
 
-                            <input class="p-1 w_100 fw_400 Poppins fs_sm border" type="email"
+                            <input class="p-1 ps-2 w_100 fw_400 Poppins fs_sm border" type="email"
                                 placeholder="Email Address">
                         </div>
                         <div class="col-6 mt-3">
                             <div class="">
-                                <input class="p-1 w_100 fw_400 Poppins fs_sm border" type="Password"
+                                <input class="p-1 ps-2 w_100 fw_400 Poppins fs_sm border" type="Password"
                                     placeholder="Password">
                             </div>
                         </div>
                         <div class="col-6 mt-3">
                             <div class=" ml_20 ">
 
-                                <input class="p-1 w_100 fw_400 Poppins fs_sm border" type="Password"
+                                <input class="p-1 ps-2 w_100 fw_400 Poppins fs_sm border" type="Password"
                                     placeholder="Confirm Password">
                             </div>
                         </div>
                         <div class="col-12 mt-3">
-                            <textarea cols="30" rows="6" class="p-1 w_100 fw_400 textarea Poppins fs_sm border"
+                            <textarea cols="30" rows="6" class="p-1 ps-2 w_100 fw_400 textarea Poppins fs_sm border"
                                 placeholder="About Me"></textarea>
                         </div>
                         <div class="col-12 mt-4 text-center">
@@ -420,13 +420,13 @@
                                 <div class="col-4 mt-3 p-2">
                                     <span><img class="w_100 " src="/assets/img/png/fu3.png" alt=""></span>
                                 </div>
-                                <div class="col-4 mt-3 p-2">
+                                <div class="col-4 mt-1 p-2">
                                     <span><img class="w_100" src="/assets/img/png/fu4.png" alt=""></span>
                                 </div>
-                                <div class="col-4 mt-3 p-2">
+                                <div class="col-4 mt-1 p-2">
                                     <span><img class="w_100" src="/assets/img/png/fu5.png" alt=""></span>
                                 </div>
-                                <div class="col-4 mt-3 p-2">
+                                <div class="col-4 mt-1 p-2">
                                     <div class="Show text-center justify-content-center d-flex align-items-center">
                                         <a class="fw_700 Poppins fs-ss clr_white" href="https://hkcl.in/">Show<br>
                                             More
